--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3001
 GIN_MODE=debug # release 生产模式 debug 调试模式
+MYSQL=root:7180d99a210abf05@tcp(192.168.1.240:3306)/ # mysql 连接
+MYSQL_DATABASE=s1 # mysql数据库
